--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto_hackaton",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.coffee",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "coffee server.coffee"
@@ -12,5 +12,8 @@
   "dependencies": {
     "restify": "~4.0.3",
     "coffee-script": "~1.10.0"
+  },
+  "engines": {
+     "node": "0.10.28"
   }
 }
